--- a/assets/original.css
+++ b/assets/original.css
@@ -1,139 +1,138 @@
-body {
-  font-family: Verdana, sans-serif;
-  margin: auto;
-  padding: 20px;
-  max-width: 720px;
-  text-align: left;
-  background-color: #1d1f27;
-  word-wrap: break-word;
-  overflow-wrap: break-word;
-  line-height: 1.5;
-  color: #c9d1d9;
+:root {
+    --width: 720px;
+    --font-main: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif;
+    --font-secondary: Verdana, sans-serif;
+    --font-scale: 1.2em;
+    --background-color: #120c0e;
+    --heading-color: #d9d8dc;
+    --text-color: #d9d8dc;
+    --link-color: #eb99a1;
+    --visited-color:  #e26f7a;
+    --code-background-color: #40363a;
+    --code-color: #d9d8dc;
+    --blockquote-color: #d9d8dc;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5,
-h6,
-strong,
-b {
-  color: #eee;
+body {
+    font-family: var(--font-secondary);
+    font-size: var(--font-scale);
+    margin: auto;
+    padding: 20px;
+    max-width: var(--width);
+    text-align: left;
+    background-color: var(--background-color);
+    word-wrap: break-word;
+    overflow-wrap: break-word;
+    line-height: 1.5;
+    color: var(--text-color);
+}
+
+h1, h2, h3, h4, h5, h6 {
+    font-family: var(--font-main);
+    color: var(--heading-color);
 }
 
 a {
-  color: #8cc2dd;
+    color: var(--link-color);
+    cursor: pointer;
+    text-decoration: none;
 }
 
-.title {
-  text-decoration: none;
-  border: 0;
-}
-.title h1 {
-  font-size: 24px;
-  margin: 19.92px 0 19.92px 0;
-}
-
-.title span {
-  font-weight: 400;
+a:hover {
+	color: var(--visited-color);
 }
 
 nav a {
-  margin-right: 10px;
+    margin-right: 8px;
 }
 
-textarea {
-  background-color: #252525;
-  color: #ddd;
-  width: 100%;
-  font-size: 16px;
+strong, b {
+    color: var(--heading-color);
 }
 
-input {
-  background-color: #252525;
-  color: #ddd;
-  font-size: 16px;
+button {
+    margin: 0;
+    cursor: pointer;
 }
 
-content {
-  line-height: 1.6;
+main {
+    line-height: 1.6;
 }
 
 table {
-  width: 100%;
+    width: 100%;
 }
 
-table,
-th,
-td {
-  border: 1px solid;
-  border-collapse: collapse;
-  border-color: #c9d1d9;
-  padding: 5px;
+hr {
+    border: 0;
+    border-top: 1px solid var(--link-color);
 }
 
 img {
-  max-width: 100%;
-  height: auto;
+    max-width: 100%;
 }
 
 code {
-  padding: 2px 5px;
-  color: #f8f8f2;
-  background-color: #282a36;
-}
-
-pre code {
-  display: block;
-  padding: 20px;
-  white-space: pre-wrap;
-  font-size: 14px;
-  overflow-x: auto;
-  text-wrap: nowrap;
+    font-family: monospace;
+    padding: 2px;
+    background-color: var(--code-background-color);
+    color: var(--code-color);
 }
 
 blockquote {
-  border-left: 1px solid #999;
-  color: #ccc;
-  padding-left: 20px;
-  font-style: italic;
+    border-left: 5px solid var(--link-color);
+  	padding: 0 15px;
+  	margin: 15px 0;
+  	line-height: 50px;
+  	font-size: 16px;
+  	background-color: var(--code-background-color);
+    color: var(--code-color);
 }
 
 footer {
-  padding: 25px;
-  text-align: center;
+    padding: 25px 0;
+    text-align: center;
 }
 
-.helptext {
-  color: #aaa;
-  font-size: small;
+.title h1 {
+ 	color: var(--link-color); 
 }
 
-.errorlist {
-  color: #eba613;
-  font-size: small;
+.title h1:hover {
+  	color: var(--visited-color);
 }
 
-/* blog posts */
+.inline {
+    width: auto !important;
+}
+
+.highlight, .code {
+    padding: 1px 15px;
+    background-color: var(--code-background-color);
+    color: var(--code-color);
+    border-radius: 3px;
+    margin-block-start: 1em;
+    margin-block-end: 1em;
+    overflow-x: auto;
+}
+
+/* blog post list */
 ul.blog-posts {
-  list-style-type: none;
-  padding: unset;
+    list-style-type: none;
+    padding: unset;
 }
 
 ul.blog-posts li {
-  display: flex;
-  margin-bottom: 10px;
+    display: flex;
 }
 
 ul.blog-posts li span {
-  flex: 0 0 130px;
+ 	min-width: 150px; 
 }
 
 ul.blog-posts li a:visited {
-  color: #8b6fcb;
+    color: var(--visited-color);
 }
-
 a.blog-tags {
   line-height: 2;
   margin-right: 12px;
